--- a/styles/css/charadex.css
+++ b/styles/css/charadex.css
@@ -15,7 +15,7 @@ body {
   /* ============================================================= */
   /* Primary Color
   ================================================================ */
-  --cd-primary-color: #8FB7D4;
+  --cd-primary-color: #f2819f;
   --cd-primary-text-color: #fff;
 
   /* ============================================================= */
@@ -51,7 +51,7 @@ body {
   /* ============================================================= */
   /* Navbar
   ================================================================ */
-  --cd-navbar-background-color: #222222;
+  --cd-navbar-background-color: linear-gradient(to bottom, #c58ccb, #9591d8);
   --cd-navbar-brand-color: var(--cd-primary-color);
   --cd-navbar-brand-color-hover: var(--cd-secondary-color);
   --cd-navbar-text-color: var(--cd-content-background-color);
@@ -105,7 +105,7 @@ body {
 
   /* Divider */
   --cd-navbar-dropdown-divider: rgba(255, 255, 255, .12);
-  --cd-navbar-dropdown-border-radius: 0 0 var(--cd-border-radius) var(--cd-border-radius);
+  --cd-navbar-dropdown-border-radius: var(--cd-border-radius) var(--cd-border-radius);
 
 
   /* ============================================================= */
@@ -259,7 +259,7 @@ a:active {
 /* Navbar
 /* ============================================================= */
 .navbar {
-  background-color: var(--cd-navbar-background-color) !important;
+  background: var(--cd-navbar-background-color) !important;
   font-family: var(--cd-navbar-font-family) !important;
   z-index: 2000;
 }
@@ -306,7 +306,7 @@ a:active {
 
 .navbar .dropdown-menu {
   color: var(--cd-navbar-dropdown-link-color) !important;
-  background-color: var(--cd-navbar-dropdown-background-color) !important;
+  background: var(--cd-navbar-dropdown-background-color) !important;
   border-radius: var(--cd-navbar-dropdown-border-radius) !important;
   border: none;
   margin-top: 0;
@@ -344,7 +344,7 @@ a:active {
 /* ============================================================= */
 
 .footer {
-  background-color: var(--cd-footer-background-color) !important;
+  background: var(--cd-footer-background-color) !important;
   color: var(--cd-footer-text-color) !important;
 }
 
