updated navbrand color

--- a/styles/css/charadex.css
+++ b/styles/css/charadex.css
@@ -52,7 +52,7 @@ body {
   /* Navbar
   ================================================================ */
   --cd-navbar-background-color: linear-gradient(to bottom, #c58ccb, #9591d8);
-  --cd-navbar-brand-color: var(--cd-primary-color);
+  --cd-navbar-brand-color: #ffffff;
   --cd-navbar-brand-color-hover: var(--cd-secondary-color);
   --cd-navbar-text-color: var(--cd-content-background-color);
   --cd-navbar-link-color: var(--cd-navbar-text-color);
